<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:id="@+id/lblHeader"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rules"
            android:textSize="30sp"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="30sp"
            app:autoSizeTextType="uniform" />

        <ImageView
            android:id="@+id/imgDetail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:contentDescription="@string/information"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/rule1" />

        <TextView
            android:id="@+id/txtDetail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:text="@string/rule1"
            android:textSize="20sp"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeTextType="uniform" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:onClick="onBackBtn_Click"
                android:text="@string/back_btn"
                android:textSize="18sp"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeTextType="uniform"
                tools:ignore="NestedWeights" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />

            <Button
                android:id="@+id/btnPrevious"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="onPreviousBtn_Click"
                android:text="@string/lt_btn"
                android:textSize="18sp"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/txtPage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/num10"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/txtSlash"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/slash"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/txtTotalPages"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/num16"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeTextType="uniform" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:onClick="onNextBtn_Click"
                android:text="@string/gt_btn"
                android:textSize="18sp"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeTextType="uniform" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>