<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    tools:context=".EndGameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblGameFinish"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/game_finished"
            android:textSize="30sp"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="30sp"
            app:autoSizeTextType="uniform"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/lblWinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/winner"
            android:textSize="24sp"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/txtWinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/britain_nation"
            android:textSize="40sp"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="40sp"
            app:autoSizeTextType="uniform" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/lblRank"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/rank"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/lblPlayers"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.75"
                    android:gravity="center"
                    android:text="@string/player"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/lblNations"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.75"
                    android:gravity="center"
                    android:text="@string/nation_"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/lblTotalScore"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:gravity="center"
                    android:text="@string/total_score"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtRank1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/num1"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/txtPlayer1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.75"
                    android:gravity="center_vertical"
                    android:text="@string/player1"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/txtNation1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.75"
                    android:gravity="center_vertical"
                    android:text="@string/britain_nation"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/txtTotalScore1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:gravity="center"
                    android:text="@string/num0"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtRan2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/num2"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/txtPlayer2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.75"
                    android:gravity="center_vertical"
                    android:text="@string/player2"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/txtNation2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.75"
                    android:gravity="center_vertical"
                    android:text="@string/france_nation"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/txtTotalScore2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:gravity="center"
                    android:text="@string/num0"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtRank3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/num3"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/txtPlayer3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.75"
                    android:gravity="center_vertical"
                    android:text="@string/player3"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/txtNation3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.75"
                    android:gravity="center_vertical"
                    android:text="@string/germany_nation"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/txtTotalScore3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:gravity="center"
                    android:text="@string/num0"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtRank4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/num4"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/txtPlayer4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.75"
                    android:gravity="center_vertical"
                    android:text="@string/player4"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/txtNation4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.75"
                    android:gravity="center_vertical"
                    android:text="@string/russia_nation"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/txtTotalScore4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:gravity="center"
                    android:text="@string/num0"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtRank5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/num5"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/txtPlayer5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.75"
                    android:gravity="center_vertical"
                    android:text="@string/player5"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/txtNation5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.75"
                    android:gravity="center_vertical"
                    android:text="@string/austria_nation"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/txtTotalScore5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:gravity="center"
                    android:text="@string/num0"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeTextType="uniform" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRestart"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onRestartBtn_Click"
                android:text="@string/restart_btn"
                android:textSize="24sp"
                app:autoSizeMaxTextSize="24sp"
                app:autoSizeTextType="uniform"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btnNewGame"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onNewGameBtn_Click"
                android:text="@string/new_game_btn"
                android:textSize="24sp"
                app:autoSizeMaxTextSize="24sp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>